packages/neos-ui-guest-frame/src/InlineUI/NodeToolbar/StructuralToolbar/style.module.css
.toolBar {
    display: flex;
    background: var(--colors-PrimaryBlue);
    position: relative;
}

.toolBar__btnGroup {
    display: flex;
    background: transparent;
}

/**
 * Fallback if the structural toolbar is on top of the node and
 * does not fit on the left side of the context toolbar
 */
@position-try --structural-toolbar-align-right {
    left: anchor(left);
    right: auto;
    bottom: anchor(top);
    position-area: none;
}
.structuralToolBar__popover {
    z-index: var(--zIndex-NodeToolBar);
    position: absolute;
    position-anchor: --inline-ui-context-toolbar-anchor;
    right: anchor(left);
    bottom: anchor(bottom);
    position-try-fallbacks: --structural-toolbar-align-right;
    height: max-content;
}
.structuralToolBar__popover:hover {
    z-index: calc(var(--zIndex-NodeToolBar) + 2);
}

.structuralToolBar__popover.structuralToolBar__popover--isBelow {
    position-anchor: --inline-ui-node-toolbar-anchor;
    position-area: bottom center;
    position-try-fallbacks: none;
    right: auto;
    top: 12px;
    border: 1px solid #35c3f8;
    border-top-width: 0;
}

.structuralToolBar__popover.structuralToolBar__popover--isInside {
    position-anchor: --inline-ui-node-toolbar-anchor;
    position-area: center center;
    position-try-fallbacks: none;
    right: auto;
    top: 10px;
    border: 1px solid #35c3f8;
}

@supports not (anchor-name: --inline-ui-node-toolbar-anchor) {
    .structuralToolBar__popover {
        pointer-events: all;
        bottom: calc(100% + 12px);
        left: 50%;
        transform: translateX(-50%);
    }

    .structuralToolBar__popover.structuralToolBar__popover--isBelow {
        top: calc(100% + 12px);
    }

    .structuralToolBar__popover.structuralToolBar__popover--isInside {
        top: 50%;
        transform: translateY(-50%);
    }
}

